# stm32_iot_bootloader

./: CMakeLists.txt  README.md  STM32F407ZETx_FLASH.ld
Stm32Common/inc/: stm32f4xx_hal_conf.h
Stm32Common/src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
